[gd_scene load_steps=22 format=3 uid="uid://5p5voaveeun0"]

[ext_resource type="Texture2D" uid="uid://drqsjq3oi01uu" path="res://Assets/PC Computer - Star Wars Galactic Battlegrounds - Stormtrooper Recruit.png" id="1_vhlks"]
[ext_resource type="Script" path="res://StormTrooper/storm_trooper.gd" id="1_wh6fr"]
[ext_resource type="PackedScene" uid="uid://6emgwcssg6lv" path="res://Laser Beam/laser_beam.tscn" id="2_ylh4o"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c5mhs"]
radius = 8.0
height = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8jhn1"]
atlas = ExtResource("1_vhlks")
region = Rect2(852, 307, 49, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbxgg"]
atlas = ExtResource("1_vhlks")
region = Rect2(901, 307, 49, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_0amv6"]
atlas = ExtResource("1_vhlks")
region = Rect2(950, 307, 49, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v8y0"]
atlas = ExtResource("1_vhlks")
region = Rect2(1097, 307, 49, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_tok6q"]
atlas = ExtResource("1_vhlks")
region = Rect2(1146, 307, 49, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_gorck"]
atlas = ExtResource("1_vhlks")
region = Rect2(1195, 307, 49, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_wctn2"]
atlas = ExtResource("1_vhlks")
region = Rect2(82, 0, 35, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_frwn4"]
atlas = ExtResource("1_vhlks")
region = Rect2(327, 0, 35, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_kghmm"]
atlas = ExtResource("1_vhlks")
region = Rect2(426, 183, 51, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcdeq"]
atlas = ExtResource("1_vhlks")
region = Rect2(477, 183, 51, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsd86"]
atlas = ExtResource("1_vhlks")
region = Rect2(783, 183, 51, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_413ns"]
atlas = ExtResource("1_vhlks")
region = Rect2(834, 183, 51, 59)

[sub_resource type="AtlasTexture" id="AtlasTexture_t71gn"]
atlas = ExtResource("1_vhlks")
region = Rect2(673, 53, 35, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpjm6"]
atlas = ExtResource("1_vhlks")
region = Rect2(638, 53, 35, 53)

[sub_resource type="SpriteFrames" id="SpriteFrames_gl0hk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jhn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbxgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0amv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v8y0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tok6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gorck")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wctn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frwn4")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kghmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcdeq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsd86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_413ns")
}],
"loop": false,
"name": &"Shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t71gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpjm6")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6gvy2"]
size = Vector2(176, 64)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_acd5d"]
radius = 16.0
height = 32.0

[node name="StormTrooper" type="CharacterBody2D"]
position = Vector2(0, 8)
script = ExtResource("1_wh6fr")
laserBeam = ExtResource("2_ylh4o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_c5mhs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4.76837e-07, -10.375)
scale = Vector2(0.642857, 0.588983)
sprite_frames = SubResource("SpriteFrames_gl0hk")
animation = &"Idle"

[node name="PlayerDetectionArea2D" type="Area2D" parent="."]
position = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea2D"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_6gvy2")

[node name="HitBoxArea2D" type="Area2D" parent="."]
position = Vector2(24, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea2D"]
position = Vector2(-24, 5)
shape = SubResource("CapsuleShape2D_acd5d")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -10)

[connection signal="body_entered" from="PlayerDetectionArea2D" to="." method="_on_player_detection_area_2d_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea2D" to="." method="_on_player_detection_area_2d_body_exited"]
[connection signal="body_entered" from="HitBoxArea2D" to="." method="_on_hit_box_area_2d_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
